add a note on needed MAVEN_OPTS for tomcat:run
git-svn-id: https://svn.apache.org/repos/asf/archiva/trunk@1212822 13f79535-47bb-0310-9956-ffa450edef68